Drawable + Style appended

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="Ivory">#EEEDE7</color>
+    <color name="Gray">#868B8E</color>
+    <color name="Pewter">#B9B7BD</color>
+    <color name="SeaShell">#E7D2CC</color>
+    <color name="cool_gray">#6C6A61</color>
+    <color name="ebony">#0A0708</color>
+
 </resources>
